tensorflow-privacy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorflow-privacy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorflow-privacy
  template:
    metadata:
      labels:
        app: tensorflow-privacy
    spec:
      containers:
      - name: tensorflow-privacy
        image: tensorflow-privacy:latest
        ports:
        - containerPort: 6000
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: tensorflow-privacy-service
spec:
  selector:
    app: tensorflow-privacy
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
